Fix CORS preflight for production